--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -140,7 +140,7 @@ h1 {
     list-style: none;
     width: 10%;
     height: 100%;
-    background: #30a5ab;
+    background: #48a0c6;
     text-align: center;
     position: absolute;
     top: 0;
